--- a/ReconstructFrom2D/ReconstructFrom2D.vcxproj.filters
+++ b/ReconstructFrom2D/ReconstructFrom2D.vcxproj.filters
@@ -145,6 +145,12 @@
     <ClCompile Include="DisplayWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VertexRecognition.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lsd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ReconstructFrom2D.h">
@@ -222,6 +228,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EquationsSolver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexRecognition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lsd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
