Fix lindo solver and add alglib solver & midaco solver

--- a/ReconstructFrom2D/ReconstructFrom2D.vcxproj.filters
+++ b/ReconstructFrom2D/ReconstructFrom2D.vcxproj.filters
@@ -160,6 +160,12 @@
     <ClCompile Include="MeshModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VerticesConnector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="midaco.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ReconstructFrom2D.h">
@@ -246,6 +252,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="lsd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VerticesConnector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
